deployment-java-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-api
  template:
    metadata:
      labels:
        app: java-api
    spec:
      containers:
        - name: java-api
          image: $(params.IMAGE_NAME)
          ports:
            - containerPort: 8081
            - containerPort: 9229
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: java-api
spec:
  selector:
    app: java-api
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: debug
      protocol: TCP
      port: 9229
      targetPort: 9229
